syntax = "proto3";

import "google/protobuf/empty.proto";

package cursor;

message CursorLockResponse {
	bool isLocked = 1;
	string errorMessage = 2;
}

service CursorManager {
	rpc ActivateCursorLock (google.protobuf.Empty) returns (CursorLockResponse) {}
	rpc DeactivateCursorLock (google.protobuf.Empty) returns (CursorLockResponse) {}
}